<resources>
    <string name="app_name">Parstagram</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="take_picture">Take picture</string>
    <string name="submit">submit</string>
    <string name="description_here">Description here...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>